deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-api
  labels:
    app.kubernetes.io/part-of: blog-api
spec:
  selector:
    app.kubernetes.io/part-of: blog-api
  ports:
  - targetPort: 8080
    port: 8080
    name: http
